Patterns modal and fix for text alignment.
Former-commit-id: 463923c70884d659068edac587ef67c87c0c8ea1 [formerly 9e7a296b9b3baa88ac52ae4770d6bb7010551cd6 [formerly 600ff75efb04fb8312573f641b8bb26b25143a5f]]
Former-commit-id: 9135bd7def18e62f48a0bab82bd19c6f9c3e4fd9
Former-commit-id: 358ed0eb3086c4794a0faa5958f4cd8765989155 [formerly 0cf30db7c62e0876a05e6a98ac8ba103228e133a]
Former-commit-id: 18e9f4d9ce3b2256afe99ed3a26bc8a317da55c5

--- a/frontend/app/assets/stylesheets/_static.scss
+++ b/frontend/app/assets/stylesheets/_static.scss
@@ -933,13 +933,14 @@ body.thank-you {
 /* Free patterns */
 .free-patterns,
 .free-christmas-patterns {
-	 text-align: center;
-
 	.row-shipping-and-contact + .container > div.row {
 		max-width: none !important;
 	}
 	.row-shipping-and-contact + .container > div.row > .columns {
 		padding: 0;
+	}
+	.wrapper-free-patterns {
+		text-align: center;
 	}
 	.wrapper-free-patterns div.row {
 		margin: 0 auto;
